<resources>
    <string name="app_name">Banco-ivtogi</string>

    <!--  WELCOME  -->
    <string name="btnEnter">Entrar</string>
    <string name="tvWelcome">Bienvenido/a a mi banco</string>

    <!--  LOGIN  -->
    <string name="title_login">Iniciar sesión</string>
    <string name="til_user">Introduce el usuario</string>
    <string name="input_required">Campo obligatorio</string>
    <string name="til_password">Introduce la contraseña</string>
    <string name="login_button">Iniciar</string>
    <string name="exit">Salir</string>
    <string name="error_login">El usuario o contraseña son erróneos</string>

    <!--  MAIN  -->
    <string name="welcome">Bienvenido/a \n%1$s</string>
    <string name="bank_button">Crea una nueva cuenta</string>
    <string name="global_position">Posición global</string>
    <string name="movements">Movimientos</string>
    <string name="transfers">Transferencias</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="promotions">Promociones</string>
    <string name="atm">Cajeros</string>
    <string name="ivUser">Imagen de perfil</string>

    <!--  CHANGE PASSWORD  -->
    <string name="til_old_password">Introduce la contraseña</string>
    <string name="til_new_password">Introduce la nueva contraseña</string>
    <string name="acept_button">Aceptar</string>
    <string name="error_match_password">La contraseña no coincide</string>
    <string name="empty_field">El campo no puede estar vacío</string>
    <string name="error_change_password">No se a podido actualizar la contraseña</string>


    <!--  TRANSFERS  -->
    <string name="choose_account">Elige tu cuenta</string>
    <string name="own_account">Cuenta propia</string>
    <string name="third_party_account">Cuenta ajena</string>
    <string name="btnSend">Enviar</string>
    <string name="btnCancel">Cancelar</string>
    <string name="amount">Cantidad:</string>
    <string name="cbProof">Enviar justificante</string>
    <string name="accept_message">Cuenta origen:\n%1$s\nCuenta destino:\n%2$s\nImporte: %3$s%4$s</string>
    <string name="accept_proof_message">Cuenta origen:\n%1$s\nCuenta destino:\n%2$s\nImporte: %3$s%4$s\nEnviar justificante</string>
    <string name="et_third_party_account">Introduce el número de cuenta</string>
    <string name="et_amount">Introduce la cantidad</string>

    <!--  GLOBAL POSITION  -->
    <string name="accounts">Cuentas:</string>

    <!--  MOVEMENTS  -->
    <string name="last_movements">Últimos movimientos</string>
    <string name="balance">%1$s Importe: %2$s</string>

    <!-- GLOBAL POSITION DETAILS -->
    <string name="movement_dialog">Id: %1$s\nTipo: %2$s\nFecha Operación: %3$s\nDescripción: %4$s\nImporte: %5$s\nCuenta Origen: %6$s\nCuenta Destino: %7$s</string>
    <string name="movement_dialog_title">Detalles movimiento</string>

    <!-- NAVIGATION DRAWER -->
    <string name="open_nav">Open navigation Drawer</string>
    <string name="settings">Configuration</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_home">Home</string>
    <string name="close_nav">Close Navigation Drawer\n</string>

    <!-- SETTINGS -->
    <string name="title_activity_settings">Ajustes</string>
    <string name="media">Multimedia</string>
    <string name="music">Musica</string>
    <string name="music_on">Escuchar la música mientras se ejecuta la aplicación</string>
    <string name="music_off">No escuchar la música mientras se ejecuta la aplicación</string>

    <string name="welcome_video">Video de bienvenida</string>
    <string name="welcome_video_on">Reproducir un video al iniciar la aplicanción</string>
    <string name="welcome_video_off">No reproducir un video al iniciar la aplicanción</string>

    <string name="language">Lenguaje</string>
    <string name="app_language">Idioma de la aplicación</string>
    <string name="language_dialog">Elige un idioma</string>
    <string name="spanish">Español</string>
    <string name="english">Ingles</string>
    <string name="french">Frances</string>
    <string name="italian">Italiano</string>
    <string name="german">Alemán</string>

    <string name="data">Data</string>
    <string name="data_dialog">Elige donde guardar los datos</string>
    <string name="data_origin">Origen de los datos</string>
    <string name="local">Datos locales</string>
    <string name="cloud">Servicio web</string>

    <string name="notifications">Notificaciones</string>
    <string name="active_notifications">Habilitar notificaciones</string>
    <string name="volume">Volumen</string>

    <!-- ATM -->
    <string name="createAtm">Crear Cajero</string>
    <string name="modifyAtm">Modificar Cajero</string>
    <string name="address">Dirección</string>
    <string name="latitude">Latitud</string>
    <string name="longitude">Longitud</string>
    <string name="btnSave">Guardar</string>
    <string name="btnUpdate">Actualizar</string>
    <string name="btnDelete">Eliminar</string>
    <string name="createdSuccessfully">Cajero creado correctamente</string>
    <string name="deletedSuccessfully">Cajero eliminado correctamente</string>
    <string name="updatedSuccessfully">Cajero actualizado correctamente</string>
    <string name="numberException">Hay algun campo no válido</string>

</resources>